<resources>
    <string name="app_name">Music Player</string>
    <string name="list_of_artists">List of artists</string>
    <string name="list_of_songs">List of songs</string>
    <string name="song_name">song name</string>
    <string name="movie_name">Movie name</string>
    <string name="song_name1">song name</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="play">play</string>
    <string name="album_image">album image</string>
    <string name="pause">pause</string>
    <string name="quote">Music gives a soul to the universe, wings to the mind, flight to the imagination and life to everything.</string>
</resources>
