<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA9BE8"
    tools:context=".NowPlaySong">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/album"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/album_image" />

            <TextView
                android:id="@+id/SongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/song_name"
                android:textAlignment="center"
                android:textColor="#0458AC"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/MovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:textColor="#E6653C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/song_name"
                android:textAlignment="center"
                android:textColor="#05000B"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:padding="8dp">


                <ImageButton
                    android:id="@+id/previous_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F8E5C5"
                    android:contentDescription="@string/previous"
                    android:padding="8dp"
                    app:srcCompat="@drawable/previous" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/play_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#F8E5C5"
                        android:contentDescription="@string/play"
                        android:padding="8dp"
                        app:srcCompat="@drawable/playbtn" />


                    <ImageButton
                        android:id="@+id/pause_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#F8E5C5"
                        android:contentDescription="@string/pause"
                        android:padding="8dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/pause" />

                </FrameLayout>

                <ImageButton
                    android:id="@+id/next_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F8E5C5"
                    android:contentDescription="@string/next"
                    android:padding="8dp"
                    app:srcCompat="@drawable/next" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>